# sistema-hotel

./: .gitignore  CMakeLists.txt  README.md  lcurses.c  lcurses.h  main.c
controller/: acomodacao.c  caixa.c  categoria.c  check.c  check_in_out.c  contaPagar.c  contaReceber.c  entrada.c  fornecedor.c  hospede.c  hotel.c  operador.c  produto.c  reserva.c  venda.c
controllers/: Acomodacao.c  Categoria.c  Fornecedor.c  Hospede.c  Hotel.c  Operador.c  Produto.c  Reserva.c
model/: database.c  database.h  database_bin.c  database_bin.h  database_local.h  database_xml.c  database_xml.h  tables.c  tables.h
view/: rotas.c  rotas.h  telas.c  telas.h  utils.c  utils.h
